# Weaponry

./: .gitignore  AGENTS.md  README.md  design-qa.md  package-lock.json  package.json  smoke-gate07.env.example
apps/agent/: pyproject.toml
apps/agent/forgecad_agent/: __init__.py  runtime_paths.py
apps/agent/forgecad_agent/api/: __init__.py  active_design_routes.py  agent_asset_routes.py  agent_routes.py  app_server_compat_routes.py  audit_export_routes.py  brief_routes.py  change_set_routes.py  concept_job_routes.py  concept_routes.py  export_routes.py  factory.py  k002_internal_routes.py  module_routes.py  quality_routes.py  restricted_geometry_routes.py
apps/agent/forgecad_agent/application/: __init__.py  active_design.py  agent_action_loop.py  agent_asset_editing.py  agent_kernel.py  agent_models.py  agent_rendering.py  app_server_compat.py  arm_design_intent.py  assembly_delta.py  combined_glb.py  combined_obj.py  concept_briefs.py  concept_change_set_audits.py  concept_change_sets.py  concept_exports.py  concept_jobs.py  concept_models.py  concept_modules.py  concept_planner.py  concept_projects.py  concept_quality.py  concept_renderer.py  concept_scope.py  concept_video.py  concept_workbench_bootstrap.py  conversation.py  domain_inference.py  domain_packs.py  geometry_models.py  geometry_worker.py  k002_port_contracts.py  k002_port_security.py  k002_python_ports.py  k002_sqlite_lifecycle.py  manifold_csg.py  material_catalog.py  material_textures.py  mechanical_planner.py  mesh_quality_inspector.py  (+13 more)
apps/agent/forgecad_agent/domain/: __init__.py
apps/agent/forgecad_agent/domain/concepts/: __init__.py  connector_snapping.py  models.py
apps/agent/forgecad_agent/infrastructure/: __init__.py
apps/agent/forgecad_agent/infrastructure/db/: __init__.py  agent_repositories.py  concept_repositories.py  connection.py  material_texture_repositories.py  migrations.py  repositories.py  unit_of_work.py
apps/agent/forgecad_agent/infrastructure/storage/: __init__.py  content_addressed_store.py
apps/agent/tests/: conftest.py  test_a005_surface_adornment_pbr.py  test_active_design_snapshot.py  test_arm_design_intent.py  test_assembly_delta.py  test_c110g_recipe_geometry.py  test_domain_inference.py  test_k002_internal_routes.py  test_k002_python_ports.py  test_k002_sqlite_lifecycle.py  test_k003_restricted_geometry_executor.py  test_mechanical_planner.py  test_provider_conversation.py  test_r007_reference_guided_rebuild.py  test_runtime_paths.py  test_shape_program.py  test_static_recipe_transform.py  test_surface_layer_retained_pbr.py  test_visual_texture_sets.py
apps/agent/tests/fixtures/: r007_robotic_arm_reference.json
apps/agent/wushen_agent/: __init__.py  asset_store.py  job_store.py  main.py  models.py  sidecar_entry.py  spec_validation.py  test_oracle.py  worker.py
apps/agent/wushen_agent/api/: __init__.py  asset_routes.py  errors.py  job_routes.py  system_routes.py  weapon_routes.py
apps/agent/wushen_agent/application/: __init__.py  asset_uploads.py  create_weapon.py  creative_recast.py  generate_3d.py  job_commands.py  job_queries.py  job_recovery.py  library.py  patch_workflow.py  unity_export.py  worker_runtime.py
apps/agent/wushen_agent/providers/: __init__.py  creative_recast.py  image.py  llm.py  three_d.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: sidecar-inputs.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/crates/forgecad-app-server/: Cargo.toml
apps/desktop/src-tauri/crates/forgecad-app-server-protocol/: Cargo.toml
apps/desktop/src-tauri/crates/forgecad-app-server-protocol/src/: compat.rs  contract_validation.rs  cursor.rs  error.rs  initialize.rs  jsonrpc.rs  k002_fixture.rs  lib.rs  lifecycle.rs  native_lifecycle.rs  native_notification.rs  notification.rs  ownership.rs  persistence.rs  product_tool.rs  provider.rs
apps/desktop/src-tauri/crates/forgecad-app-server/src/: action_loop.rs  cancellation.rs  canonical.rs  context.rs  event_queue.rs  handler.rs  lib.rs  lifecycle.rs  native_runtime.rs  product_tools.rs  provider.rs  server.rs  trace.rs
apps/desktop/src-tauri/crates/forgecad-core/: Cargo.toml
apps/desktop/src-tauri/crates/forgecad-core/src/: arm_design_intent.rs  arm_geometry_family.rs  artifact_migration.rs  artifact_readback.rs  assembly_delta.rs  canonical.rs  error.rs  external_glb.rs  lib.rs  (+15 more)
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_server_bridge.rs  asset_render_compat.rs  c110g_packaged_probe.rs  deepseek_delta_acceptance_probe.rs  deepseek_mvp_acceptance_probe.rs  deepseek_provider.rs  k003_packaged_probe.rs  main.rs  mvp_arm_packaged_probe.rs  mvp_arm_provider.rs  provider_credentials.rs  rust_core_runtime.rs  rust_product_catalog.rs
apps/desktop/src-tauri/src/rust_core_runtime/: legacy_read_http_tests.rs
(+632 files in other folders)
