[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wushen-agent"
version = "0.1.0"
description = "Local FastAPI Agent service for Wushen Forge."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.139,<0.140",
  "starlette>=1.3.1,<2.0",
  "uvicorn>=0.51,<0.52",
  "pydantic>=2.7",
  "jsonschema>=4.22",
  "manifold3d==3.5.2",
  "numpy==2.4.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wushen_agent*", "forgecad_agent*"]

[tool.ruff]
line-length = 100
target-version = "py39"
