[package]
name = "wushen-forge-desktop"
version = "0.1.0"
description = "Wushen Forge desktop shell"
authors = ["Wushen Forge Contributors"]
edition = "2021"

[workspace]
members = [
  ".",
  "crates/forgecad-app-server-protocol",
  "crates/forgecad-app-server",
  "crates/forgecad-core",
]
default-members = [
  ".",
  "crates/forgecad-app-server-protocol",
  "crates/forgecad-app-server",
  "crates/forgecad-core",
]
resolver = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
forgecad-app-server = { path = "crates/forgecad-app-server" }
forgecad-app-server-protocol = { path = "crates/forgecad-app-server-protocol" }
forgecad-core = { path = "crates/forgecad-core" }
base64 = "0.22"
getrandom = "0.3"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "sync", "time"] }
zeroize = "1.8"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
security-framework-sys = "2.17"

[features]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }

[[test]]
name = "deepseek_provider"
path = "src/deepseek_provider.rs"
