[package]
name = "forgecad-app-server"
version = "0.1.0"
description = "Bounded in-process ForgeCAD app-server core"
edition = "2021"

[lib]
name = "forgecad_app_server"
path = "src/lib.rs"

[dependencies]
forgecad-app-server-protocol = { path = "../forgecad-app-server-protocol" }
forgecad-core = { path = "../forgecad-core" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "sync", "time"] }
